# arch-unity7

./: README.md  downstreamDevlog.md
pkgbuilds/dev-libs/dee/src/: AUTHORS  Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  dee-1.0.pc.in  dee-icu-1.0.pc.in  dee_1.2.7+17.10.20170616-8build1.debian.tar.xz  libtool
pkgbuilds/dev-libs/dee/src/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2
pkgbuilds/dev-libs/dee/src/bindings/: Makefile  Makefile.am  Makefile.in  README
pkgbuilds/dev-libs/dee/src/debian/: changelog  control  copyright  gir1.2-dee-1.0.install  gir1.2-dee-1.0.lintian-overrides  libdee-1.0-4.examples  libdee-1.0-4.symbols  libdee-dev.install  rules  watch
pkgbuilds/dev-libs/dee/src/doc/: Makefile  Makefile.in
pkgbuilds/dev-libs/dee/src/examples/: Makefile  Makefile.am  Makefile.in  list-peers  master-model  master-model.c  master-model.vala  peers  peers.c  slave-model  slave-model.c  synced-lists.c
pkgbuilds/dev-libs/dee/src/src/: Dee-1.0.gir  Makefile  Makefile.am  Makefile.in  com.canonical.Dee.Peer-xml.h  dee-icu.h  dee-marshal.list  dee-server.c  libdee-1.0.la  libdee_1_0_la-dee-analyzer.lo  libdee_1_0_la-dee-client.lo  libdee_1_0_la-dee-file-resource-manager.lo  libdee_1_0_la-dee-filter-model.lo  libdee_1_0_la-dee-filter.lo  libdee_1_0_la-dee-glist-result-set.lo  libdee_1_0_la-dee-hash-index.lo  libdee_1_0_la-dee-icu-term-filter.lo  libdee_1_0_la-dee-index.lo  libdee_1_0_la-dee-marshal.lo  libdee_1_0_la-dee-model-reader.lo  libdee_1_0_la-dee-model.lo  libdee_1_0_la-dee-peer.lo  libdee_1_0_la-dee-proxy-model.lo  libdee_1_0_la-dee-resource-manager.lo  libdee_1_0_la-dee-result-set.lo  libdee_1_0_la-dee-sequence-model.lo  libdee_1_0_la-dee-serializable-model.lo  libdee_1_0_la-dee-serializable.lo  libdee_1_0_la-dee-server.lo  libdee_1_0_la-dee-shared-model.lo  libdee_1_0_la-dee-term-list.lo  libdee_1_0_la-dee-text-analyzer.lo  libdee_1_0_la-dee-transaction.lo  libdee_1_0_la-dee-tree-index.lo  trace-log.c  trace-log.h
pkgbuilds/dev-libs/dee/src/tests/: Makefile  Makefile.am  Makefile.in  model-helper-add3rows.c  model-helper-append1.c  model-helper-change3rows.c  model-helper-clear3add5.c  model-helper-clear3rows.c  model-helper-clear6rows.c  model-helper-clone3rows-meta.c  model-helper-clone3rows.c  model-helper-insert1row.c  model-helper-introspect.c  model-helper-remove3rows.c  model-helper-replace.c  model-helper-resync3rows.c  model-helper-schemaless.c  peer-helper-1peer.c  server-helper-client.c  test-analyzer.c  test-benchmark.c  test-client-server.c  test-dee.c  test-filter-model.c  test-glist-result-set.c  test-icu.c  test-index.c  test-model-column.c  test-model-complex-column.c  test-model-interactions.c  test-model-readers.c  test-model-rows.c  test-model-seqnums.c  test-model-signals.c  test-model-tags.c  test-peer-interactions.c  test-python.py  test-resource-manager.c  test-serializable.c  test-term-list.c  (+1 more)
pkgbuilds/dev-libs/dee/src/tools/: Makefile  Makefile.am  Makefile.in  dee-tool
pkgbuilds/dev-libs/dee/src/vapi/: Dee-1.0-custom.vala  Dee-1.0.metadata  Makefile  Makefile.am  Makefile.in
pkgbuilds/dev-libs/libcolumbus/src/libcolumbus-1.1.0+15.10.20150806/: CMakeLists.txt  coding style.txt  hacking.txt  readme.txt
pkgbuilds/dev-libs/libunity-misc/src/libunity-misc-4.0.5+14.04.20140115/: Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  libtool  unity-misc.pc.in
pkgbuilds/dev-libs/libunity/src/: AUTHORS  Makefile  Makefile.am  Makefile.decl  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  libunity_7.1.4+19.04.20190319-6.1ubuntu1.debian.tar.xz  unity-extras.pc  unity-extras.pc.in  unity-protocol-private.pc  unity-protocol-private.pc.in  unity.pc.in
pkgbuilds/dev-libs/libunity/src/autom4te.cache/: output.1  output.3  requests  traces.0  traces.2  traces.3
pkgbuilds/dev-libs/libunity/src/bindings/: Makefile  Makefile.in
pkgbuilds/dev-libs/libunity/src/data/: Makefile  Makefile.am  Makefile.in  client-scopes.json  com.canonical.Unity.Lenses.gschema.xml.in.in
pkgbuilds/dev-libs/libunity/src/debian/: changelog  clean  control  copyright  libunity-dev.install  libunity-protocol-private0.install  libunity-scopes-json-def-desktop.install  libunity-scopes-json-def-phone.install  libunity-tools.install  libunity9.install  libunity9.symbols  rules  unity-scopes-runner.install  watch
pkgbuilds/dev-libs/libunity/src/doc/: Makefile  Makefile.in
pkgbuilds/dev-libs/libunity/src/examples/: Makefile  Makefile.am  Makefile.in  launcher  launcher.c  launcher.py  launcher.vala  merge-strategy.py  scope1.c  scope1.la  scope1.lo  scope1.vala  scope2.c  scope2.la  scope2.lo  scope2.vala
pkgbuilds/unity-base/frame/src/: INSTALL  Makefile  Makefile.am  Makefile.in  README  autogen.sh  config.h  config.status  configure  configure.ac  frame-x11.pc.in  frame.pc.in  frame_2.5.0daily13.06.05+16.10.20160809-0ubuntu5.diff  libtool
pkgbuilds/unity-lens/unity-lens-applications/src/: Makefile  Makefile.am  Makefile.in  NEWS  TESTS-TODO.txt  autogen.sh  config.h  config.h.in~  config.status  configure.ac  configure~  libtool  remove-software-center-filter-option.patch  unity-lens-applications_7.1.0+16.10.20160927-0ubuntu8.diff
pkgbuilds/unity-lens/unity-lens-files/src/: ChangeLog  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  TESTS-TODO.txt  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  libtool  local.scope  local.scope.in  local.scope.in.in  remove-1kb-filter-option.patch  unity-lens-files_7.1.0+17.10.20170605-0ubuntu6.diff
pkgbuilds/unity-lens/unity-scope-home/src/: Do-not-retry-null-SmartScopesClient.patch  Makefile  Makefile.am  Makefile.decl  Makefile.in  Remove-Software-center-and-1kB-filter-option-and-fix-100kB.patch  autogen.sh  config.h  config.status  configure  configure.ac  libtool  unity-scope-home_6.8.2+19.04.20190412-0ubuntu8.debian.tar.xz
(+5717 files in other folders)
